--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
 </head>
 
 <body>
@@ -27,7 +28,65 @@
     </header>
 
     <main>
-       
+       <section>
+           <H2 hidden>Фільтри</H2>
+           <ul>
+               <li><button button type="button" class="filter-button">Все</button></li>
+               <li><button button type="button" class="filter-button">Веб-сайты</button></li>
+               <li><button button type="button" class="filter-button">Приложения</button></li>
+               <li><button button type="button" class="filter-button">Дизайн</button></li>
+               <li><button button type="button" class="filter-button">Маркетинг</button></li>
+           </ul>
+       </section>
+       <section class="projects">
+           <h2 hidden>Проекты</h2>
+           <ul>
+               <li>
+                   <img src="./images/Portfolio/Tekhnokryak.jpg" alt="Технокряк" width="370">
+                   <h3>Технокряк</h3>
+                   <p>Веб-сайт</p>
+               </li>
+               <li>
+                   <img src="./images/Portfolio/poster.jpg" alt="Постер" width="370">
+                   <h3 lang="en">Постер New Orlean vs Golden Star</h3>
+                   <p>Дизайн</p>
+               </li>
+               <li>
+                    <img src="./images/Portfolio/restorant.jpg" alt="Ресторан" width="370">
+                    <h3>Ресторан Seafood</h3>
+                    <p>Приложение</p>
+                </li>
+               <li>
+                   <img src="./images/Portfolio/prime.jpg" alt="Проект Prime" width="370">
+                   <h3>Проект Prime</h3>
+                   <p>Маркетинг</p>
+                </li>
+               <li>
+                   <img src="./images/Portfolio/boxes.jpg" alt="Проект Boxes" width="370">
+                   <h3>Проект Boxes</h3>
+                   <p>Приложение</p>
+                </li>
+               <li>
+                   <img src="./images/Portfolio/inspiration.jpg" alt="Inspiration has no Borders" width="370">
+                   <h3 lang="en">Inspiration has no Borders</h3>
+                   <p>Веб-сайт</p></li>
+               <li>
+                   <img src="./images/Portfolio/limited-edition.jpg" alt="Издание Limited Edition" width="370">
+                   <h3>Издание Limited Edition</h3>
+                   <p>Дизайн</p>
+                </li>
+               <li>
+                   <img src="./images/Portfolio/lab.jpg" alt="Проект LAB" width="370">
+                   <h3>Проект LAB</h3>
+                   <p>Маркетинг</p>
+                </li>
+               <li>
+                   <img src="./images/Portfolio/growing-bussiness.jpg" alt="Growing Business" width="370">
+                   <h3 lang="en">Growing Business</h3>
+                   <p>Приложение</p>
+                </li>
+           </ul>
+       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
