class button delited

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,11 @@
        <section>
            <H2 hidden>Фільтри</H2>
            <ul>
-               <li><button button type="button" class="filter-button">Все</button></li>
-               <li><button button type="button" class="filter-button">Веб-сайты</button></li>
-               <li><button button type="button" class="filter-button">Приложения</button></li>
-               <li><button button type="button" class="filter-button">Дизайн</button></li>
-               <li><button button type="button" class="filter-button">Маркетинг</button></li>
+               <li><button type="button" class="filter">Все</button></li>
+               <li><button type="button" class="filter">Веб-сайты</button></li>
+               <li><button type="button" class="filter">Приложения</button></li>
+               <li><button type="button" class="filter">Дизайн</button></li>
+               <li><button type="button" class="filter">Маркетинг</button></li>
            </ul>
        </section>
        <section class="projects">
