--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- Hero -->
       <section class="Hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button button type="button" class="hero-button">Заказать услугу</button>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <!-- Features -->
       <section class="features">
