--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="" class="logo">Web<span class="logo-header">Studio</span></a>
+            <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
             <ul class="site-nav">
                 <li><a href="./index.html">Студия</a></li>
                 <li><a href="" class="link current">Портфолио</a></li>
@@ -90,7 +90,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <a href="" class="logo">Web<span class="logo-footer">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
         <address>
             <a href="https://goo.gl/maps/EsFHMrBiEFBvNgybA" target="_blank" rel="noreferrer noopener" class="address">г.
                 Киев, пр-т Леси Украинки, 26</a>
